// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`source.alias 1`] = `
"const a = 'hello world';
console.info(a);
"
`;

exports[`source.alias 2`] = `
""use strict";
var __webpack_exports__ = {};
const a = 'hello world';
console.info(a);
for(var __webpack_i__ in __webpack_exports__)exports[__webpack_i__] = __webpack_exports__[__webpack_i__];
Object.defineProperty(exports, '__esModule', {
    value: true
});
"
`;

exports[`source.alias 3`] = `
"import * as __WEBPACK_EXTERNAL_MODULE__a_js_256e6de1__ from "./a.js";
console.info(__WEBPACK_EXTERNAL_MODULE__a_js_256e6de1__.a);
"
`;

exports[`source.alias 4`] = `
""use strict";
var __webpack_exports__ = {};
const external_a_cjs_namespaceObject = require("./a.cjs");
console.info(external_a_cjs_namespaceObject.a);
for(var __webpack_i__ in __webpack_exports__)exports[__webpack_i__] = __webpack_exports__[__webpack_i__];
Object.defineProperty(exports, '__esModule', {
    value: true
});
"
`;
